added blog post 2

--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -3,8 +3,32 @@ layout: post
 title: Week 2
 ---
 
+### Part 1
 
-This text should be replaced by your second post.
+The purpose of the Code of Conduct document is to outline certain standards of behavior that all participants or users of the project should adhere to, and the course of action that will take place if they are not. This behavior includes respecting others, avoiding discrimination of any kind, and making sure that there aren't any forms of harassment taking place. In some documents, depending on the project, there may be additional sections that highlight project-specific information. These could include things like 'about' or 'values' sections. I think that having this document could be beneficial in several ways. Reading about how the project will deal with unacceptable behavior could be extremely helpful in the case that a conflict does arise. Then, the users can read this section and know exactly how to respond and what to do. This document may also be useful for someone who wants to learn more about the goals of a specific project for the future. This type of information may be found in the "About" section if such a section exists, and could be helpful for a user. 
+
+The Go Code of Conduct document includes some additional sections. It begins with an "About" section, which is followed by a "Gopher Values" section. These do not exist in the Contributor Covenant document. These sections may have been added to give a user more information about specifically the Go project's goals or guidelines. It also has a "Conflict Resolution" section at the bottom of the document, which does not exist in the Contributor Covenant document. This was included to explain exactly how the Go project will handle conflict, including details reporting who will be contacted and exactly what will happen. In the Contributor Covenant document, there is just an "Enforcement" section which does not give such details. 
+
+Eclipse Code of Conduct: 
+https://www.eclipse.org/org/documents/Community_Code_of_Conduct.php
+
+This document more closely follows the Contributor Covenant document. This means that the document doesn't contain many organization-specific details that people need to know regarding conflict. The Go project Code of Conduct, however, contains a few extra sections that I stated above, that go into more organization-specific details. 
+
+### Part 2
+
+The Sugar Labs Code of Conduct document looks much different than that for the Go project and Eclipse. This is because the Sugar Labs Code of Conduct is based on the Ubuntu Code of Conduct instead of the Contributor Covenant. Similar to the Go Code of Conduct document, this one contains information that is specific to Sugar Labs at the top of the document. The remaining part of the document is organized much differently. Many of the sections mainly highlight how to interact with and work with other developers. The information is less focused on conflict, and more focused on collaboration guidelines. As such, there is no section that explains how to handle conflict. 
+
+### Part 3
+
+Python Code of Conduct:
+https://www.python.org/psf/conduct/
+
+I chose to look at the Code of Conduct document for Python. This document has many sections that neither of the above have. One of these is a "Weapons Policy" section, which states that no weapons are allowed at Python Software Foundation events. There are also two large sections at the end called "PSF Events" and "PSF Online Spaces". PSF stands for Python Software Foundation. These two sections essentially state that the document applies to individuals that are a part of this foundation and that it should be enforced by them as well. Additionally, it has information at the top of the page about Python's community values and behaviors. This is similar to the top of the Go Code of Conduct document, which also contains information about Go's community values. 
+
+
+
+
+
 
 The easiest way to make your second post is to edit this one.
 Go into /_posts/ and update the 2022-02-06-week02.md file.
