added 'more' html tags for preview

--- a/_posts/2022-01-30-week01.md
+++ b/_posts/2022-01-30-week01.md
@@ -10,6 +10,8 @@ title: Open Source Intro
 
 When I hear the term "open source", I immediately think of the vast number of times where I was working on a project, had to implement a certain library, didn't know how to use it, and had to go to the github source code to try and figure it out. I know that this doesn't exactly align with the definition of "open source", but it was my original understanding of what the term meant. I thought that it meant just all of the documentation of certain libraries or projects that have been created that are available on github for anyone to use. However, open source can apply to anything, not just software. As mentioned in class, wikipedia is open source, but doesn't have anything to do with coding. Additionally, open source in the context of software applies to so much more than just a library that I didn't understand how to use. So many things that drive daily life are backed by an open source project or software. Examples of these include coding languages themselves, IDEs, cryptocurrencies, etc. One of the advantages of having something be open source is that it is much more beneficial to society as a whole. Instead of individual actors from different parts of the world devoting all of their time and energy to solving a problem that may have already been solved, with open source projects they can simply find the solution, and use that time and energy to instead build upon it and optimize it. This allows individuals from across the world to benefit from each others work, instead of competing with each other to develop the same thing. However, the downside of this is that once someone does find a solution that they decide to make open source, the opportunity to profit when other people use their work goes decreases, as they basically sign away their ownership of the material. 
 
+<!--more-->
+
 ### Why this class? 
 
 I decided to register for this class because this is the first CS class that I have taken that is independent, and that teaches students to be open minded and to figure things out for themselves. In prior classes, there is typically some sort of topic list that we are given at the beginning of the semester, and then we are given assignments to practice these topics, and then we are tested on it in some way. This is not how real work as a software developer goes as far as I know. My work as a software developer has been project based, and if I run into a problem while developing, it is up to me to figure it out. I believe that this class will help me improve my skills in figuring out solutions to problems on my own. Also, a huge part of my work as a software developer was being able to find open source code that fit the needs of the project I was working on, and be able to implement it. Most other classes don't teach students how to do that themselves. I'm hoping this class will help with that skill too. 
