--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -7,6 +7,8 @@ title: Week 2
 
 The purpose of the Code of Conduct document is to outline certain standards of behavior that all participants or users of the project should adhere to, and the course of action that will take place if they are not. This behavior includes respecting others, avoiding discrimination of any kind, and making sure that there aren't any forms of harassment taking place. In some documents, depending on the project, there may be additional sections that highlight project-specific information. These could include things like 'about' or 'values' sections. I think that having this document could be beneficial in several ways. Reading about how the project will deal with unacceptable behavior could be extremely helpful in the case that a conflict does arise. Then, the users can read this section and know exactly how to respond and what to do. This document may also be useful for someone who wants to learn more about the goals of a specific project for the future. This type of information may be found in the "About" section if such a section exists, and could be helpful for a user. 
 
+<!--more-->
+
 The Go Code of Conduct document includes some additional sections. It begins with an "About" section, which is followed by a "Gopher Values" section. These do not exist in the Contributor Covenant document. These sections may have been added to give a user more information about specifically the Go project's goals or guidelines. It also has a "Conflict Resolution" section at the bottom of the document, which does not exist in the Contributor Covenant document. This was included to explain exactly how the Go project will handle conflict, including details reporting who will be contacted and exactly what will happen. In the Contributor Covenant document, there is just an "Enforcement" section which does not give such details. 
 
 Eclipse Code of Conduct: 
