--- a/_posts/2022-02-13-week03.md
+++ b/_posts/2022-02-13-week03.md
@@ -8,6 +8,8 @@ title: Git Activity, Jim Hall
 
 Personally, I thought the Git exercises that we did in class were extremely helpful. I have never been taught how to use Git formally. It is just something that I needed to start using for an internship, and had to learn mostly on my own. Since then, I have used it a ton when doing work for classes, or when developing with other people in a group setting. When I was doing this, all I really needed to know was how to add, commit, push, and pull. I didn't really know what was going on internally or why certain things happened the way they did. Consequently, whenever I ran into a merge conflict or anything of the sort, I was extremely confused and didn't know how to fix it. 
 
+<!--more-->
+
 Naturally, over time, I became better at it just from using it over and over again and running into the same problems. However, it was really nice to be able to learn it formally and learn why things happen the way they do. I thought it was especially helpful learning about how forking works, formally learning how to resolve merge conflicts and how to avoid them, and how to create different branches and work simultaneously in a group setting. These are all skills that are necessary in the world of software development, and will help me a lot in the future. 
 
 ## Jim Hall Discussion
