finished blog post

--- a/_posts/2022-02-20-week04.md
+++ b/_posts/2022-02-20-week04.md
@@ -19,3 +19,8 @@ The main thing that I learned was that group members all bring different strengt
 
 
 ## Other Teams' Work
+
+Overall, I enjoyed watching other groups' presentations and seeing the ideas people came up with for the browser extension. I liked the variety of things that the class came up with; some had extensions that didn't have much practical use but were cool to look at, while others were simple, but were valid solutions to existing problems. For example, the Slap-A-Fetti extension does not have much practical use, but it was cool to see the effect that the extension caused on the screen. On the other hand, projects like Less Ugly Brightspace and Study Timer were relatively simple ideas but could legitimately be useful to a student if they were to have it on their computers.  
+
+
+
