--- a/_posts/2022-03-06-week06.md
+++ b/_posts/2022-03-06-week06.md
@@ -9,6 +9,8 @@ title: Christopher Snider and open source
 
 I really enjoyed listening to Christopher talk about his life story. Hearing about how he deals with the challenges of diabetes was very inspiring. It was also interesting to hear his perspective about some of the daily issues that come with having diabetes because one of my best friends also has it, and I have observed him deal with the same problems that Christopher was talking about, for the last 4 years. Christopher stated that he was never able to live the type of college lifestyle that he wanted because of his diabetes. This is something that I have observed with my friend, as he is sometimes not able to do things with me due to his low blood sugar or some other complication. Although I was somewhat aware of the daily problems that having diabetes causes, it had never occurred to me that open source software could actually be a solution to these problems. 
 
+<!--more-->
+
 One thing that I liked especially about this presentation was the fact that he wasn't ever big into computer science or coding, but still benefits from open source software. This really opened my eyes to how important open source is for the world as a whole, and that it is not just the computer science community or big tech companies that benefit from open source software projects. 
 
 Prior to the presentation, I was unaware of how much data there was about individuals with diabetes that would help them if they had access to it. Tidepool takes advantage of this, tracks all the data and makes decisions based on it. One such benefit of this process is automated insulin dosing. With Tidepool's open source software, they are able to automatically adjust the insulin levels in the bloodstream. This can allow people like Christopher, and my friend, to live normal lives and not have to worry about their condition all the time. 
