--- a/_posts/2022-03-28-week09.md
+++ b/_posts/2022-03-28-week09.md
@@ -8,6 +8,9 @@ title: project, Tom Callaway
 
 For our group project, we have chosen the open source project called Spicetify. Spicetify is a spin-off of Spotify that allows contributors to add different themes and create different features. We chose this project because it was a relatively straightforward concept, and there weren't an overwhelming amount of files for us to familiarize ourself with. Additionally, there are contributions being made by others constantly, and the main contributors are relatively active in the issues section. 
 
+
+<!--more-->
+
 Originally, our goals were to create one theme and one extension for the first week. After diving deeper into the code and figuring out how it worked, we realized that these goals were a little bit too ambitious, and we had to adjust. We adjusted our goal to instead be to download the software, become really familiar with the code, and try fixing something from the issues/bug sections. 
 
 
