--- a/_posts/2022-03-28-week10.md
+++ b/_posts/2022-03-28-week10.md
@@ -1,21 +1,13 @@
 ---
 layout: post
-title: project, Tom Callaway
+title: group project
 ---
 
-## Group Project
+## Group Work Reflection
 
+This week in class and afterward during our weekly meeting time we made very good progress on our project. Coming into the class we really weren't really sure of what we were going to be able to contribute to in Spicetify. Also, I had some initial difficulty downloading the project and getting it to work on my computer. I had to add some of my own additional steps to the instructions that were listed in the CONTRIBUTING.md file on the repository. Eventually, I was able to get it running. My groupmates were very helpful in this process. 
 
-For our group project, we have chosen the open source project called Spicetify. Spicetify is a spin-off of Spotify that allows contributors to add different themes and create different features. We chose this project because it was a relatively straightforward concept, and there weren't an overwhelming amount of files for us to familiarize ourself with. Additionally, there are contributions being made by others constantly, and the main contributors are relatively active in the issues section. 
+Once I got it working, we started playing around with the different themes, and seeing how we could potentially make our own or modify an existing theme. We also took a deeper look at the open issues and looked for ones that we could potentially contribute to. Luckily, we found one that was opened recently and didn't seem too difficult to fix. The issue was that someone was trying to make an "all black" theme that needed to be updated. We took the issue and changed some of the colors for different sections of the Spotify UI. 
 
+Most of the above was done during class. After class, we met in the library and continued working. We initially had some trouble submitting the pull request for the changes that we made, but figured it out eventually. We also created a new theme based on some of the others, by simply changing the colors around. Overall, we were able to get much more comfortable with the project and now have a much better idea of how we are going to contribute. Our main goals for next week are to stay updated with new open issues, keep track of our pull request, explore other themes and figure out how we could add to them or modify them, and finally, to explore the marketplace extensions. The extensions are more of a long term goal due to the fact that they are much more in depth and are all written in javascript. 
 
-<!--more-->
-
-Originally, our goals were to create one theme and one extension for the first week. After diving deeper into the code and figuring out how it worked, we realized that these goals were a little bit too ambitious, and we had to adjust. We adjusted our goal to instead be to download the software, become really familiar with the code, and try fixing something from the issues/bug sections. 
-
-
-## Tom Callaway
-
-Tom Callaway spoke to us about his work as an open source evangelist for Amazon Web Services. This was interesting to hear because it provided a good bridge between what we are learning in class about open source projects and the real world, with billion dollar companies. He said that within AWS, 100% of marketing sector codebases, 98% of healthcare codebases, and 97% of financial sector codebases were open source. I found this interesting too because it shows that open source projects are becoming more and more common with time. 
-
-When asked if they invest in open source, Tom said that AWS invests in open source because they want to be on the forefront of future open source developments. I think that this is a really smart way of looking at it, because the data above shows that open source is becoming a bigger and bigger part of companies today. By investing in it, AWS is making an effort to contribute to this increasing popularity of open source. 
