added more separator for blog post 10

--- a/_posts/2022-03-28-week10.md
+++ b/_posts/2022-03-28-week10.md
@@ -7,6 +7,8 @@ title: group project
 
 This week in class and afterward during our weekly meeting time we made very good progress on our project. Coming into the class we really weren't really sure of what we were going to be able to contribute to in Spicetify. Also, I had some initial difficulty downloading the project and getting it to work on my computer. I had to add some of my own additional steps to the instructions that were listed in the CONTRIBUTING.md file on the repository. Eventually, I was able to get it running. My groupmates were very helpful in this process. 
 
+<!--more-->
+
 Once I got it working, we started playing around with the different themes, and seeing how we could potentially make our own or modify an existing theme. We also took a deeper look at the open issues and looked for ones that we could potentially contribute to. Luckily, we found one that was opened recently and didn't seem too difficult to fix. The issue was that someone was trying to make an "all black" theme that needed to be updated. We took the issue and changed some of the colors for different sections of the Spotify UI. 
 
 Most of the above was done during class. After class, we met in the library and continued working. We initially had some trouble submitting the pull request for the changes that we made, but figured it out eventually. We also created a new theme based on some of the others, by simply changing the colors around. Overall, we were able to get much more comfortable with the project and now have a much better idea of how we are going to contribute. Our main goals for next week are to stay updated with new open issues, keep track of our pull request, explore other themes and figure out how we could add to them or modify them, and finally, to explore the marketplace extensions. The extensions are more of a long term goal due to the fact that they are much more in depth and are all written in javascript. 
